[ASTERIXDB-2829][IDX] Adding support for composite atomic-array indexes
- user mode changes: no
- storage format changes: no
- interface changes: no

Adding support for composite atomic-array indexes. The only prefix
queries supported must involved the array component on closed fields.
Also expanded the test coverage to explore more paths (w.r.t the
optimizer).

Change-Id: I2579a9da8dcd8b8c808b20883f356aab3e1a7095
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/12764
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Dmitry Lychagin <dmitry.lychagin@couchbase.com>